Made a couple more basic styling tweaks.

--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,12 @@
 	<link rel="stylesheet" type="text/css" href="stylesheets/search_form.css">
 	<link rel="stylesheet" type="text/css" href="stylesheets/movie_results.css">
 	<link rel="stylesheet" type="text/css" href="stylesheets/favorites.css">
+	<link rel="stylesheet" type="text/css" href="stylesheets/wrapper.css">
 </head>
 <body>
 
-	<div>
-		<div id="favorites" class="Favorites">
+	<div class="Wrapper">
+		<div class="Favorites">
 			<button onclick="FavoritesService.retrieveAndDisplayFavorites()">Show My Favorites</button>
 			<div id="favorites"></div>
 		</div>
