Made the README great again.

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Movies Database</title>
+	<title>Movie Database</title>
 	<link rel="stylesheet" type="text/css" href="stylesheets/search_form.css">
 	<link rel="stylesheet" type="text/css" href="stylesheets/movie_results.css">
 	<link rel="stylesheet" type="text/css" href="stylesheets/favorites.css">
@@ -11,7 +11,7 @@
 
 	<div class="Wrapper">
 		<div class="Favorites">
-			<button onclick="FavoritesService.retrieveAndDisplayFavorites()">Show My Favorites</button>
+			<button onclick="FavoritesService.retrieveAndDisplayFavorites()">Show / Refresh My Favorites</button>
 			<div id="favorites"></div>
 		</div>
 
